@@ -156,3 +156,5 @@
 	* Added 'RD_DeleteLog()' call.
 	* Added common i/o functions for tests in 'tests/common.c' and
 	'tests/common.h'.
+2017-01-31 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'RD_SaveLog()' call.
